--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "expo": "~48.0.18",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-native": "0.71.8",
     "react-native-gesture-handler": "2.5.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "^4.6.4",
-    "react-native-snap-carousel": "https://github.com/ram33z/react-native-snap-carousel"
+    "react-native-snap-carousel": "https://github.com/ram33z/react-native-snap-carousel",
+    "react-native-web": "~0.18.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
